add maven build plugin

--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -27,6 +27,13 @@
                 <configuration>
                     <mainClass>com.cmy.sample.SampleApplication</mainClass>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
