modified pom config

--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>xcheck</artifactId>
-        <groupId>com.cmy</groupId>
+        <artifactId>xcheck-project</artifactId>
+        <groupId>com.cjw</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,6 +12,11 @@
     <artifactId>sample</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>com.cjw</groupId>
+            <artifactId>xcheck</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
