--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.cmy</groupId>
+    <groupId>com.cjw</groupId>
     <artifactId>xcheck-project</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
+        <module>xcheck</module>
         <module>sample</module>
     </modules>
     <packaging>pom</packaging>
