--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>1.4.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
