--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>xcheck</module>
+        <module>ac</module>
         <module>sample</module>
     </modules>
     <packaging>pom</packaging>
