--- a/ac/pom.xml
+++ b/ac/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.cjw</groupId>
+        <groupId>com.c.j.w</groupId>
         <artifactId>xcheck-project</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
