--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>xcheck-project</artifactId>
-        <groupId>com.cjw</groupId>
+        <groupId>com.c.j.w</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,12 +13,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.cjw</groupId>
+            <groupId>com.c.j.w</groupId>
             <artifactId>xcheck</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.cjw</groupId>
+            <groupId>com.c.j.w</groupId>
             <artifactId>ac</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
