--- a/xcheck/pom.xml
+++ b/xcheck/pom.xml
@@ -3,14 +3,14 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.cjw</groupId>
+        <groupId>com.c.j.w</groupId>
         <artifactId>xcheck-project</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>xcheck</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
