--- a/xcheck/pom.xml
+++ b/xcheck/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>xcheck</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${xcheck.version}</version>
 
     <dependencies>
         <dependency>
