--- a/xcheck/pom.xml
+++ b/xcheck/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.c.j.w</groupId>
         <artifactId>xcheck-project</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0-RELEASE</version>
     </parent>
     <artifactId>xcheck</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-    <version>${xcheck.version}</version>
+    <version>1.0.0-RELEASE</version>
 
     <dependencies>
         <dependency>
