--- a/sample/src/main/resources/application.yml
+++ b/sample/src/main/resources/application.yml
@@ -7,3 +7,8 @@ spring:
     password: 1qaz2wsx
     host: 127.0.0.1
     port: 6379
+
+xcheck:
+  controller-package: com.c.j.w.sample
+  column-alias: startTime=开始时间, endTime=结束时间
+  show-error-message: false
