--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -2,39 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>xcheck-project</artifactId>
-        <groupId>com.c.j.w</groupId>
-        <version>1.0.0-RELEASE</version>
-    </parent>
+    <groupId>com.c.j.w</groupId>
+    <version>0.0.1-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <artifactId>sample</artifactId>
-    <version>1.0.0-RELEASE</version>
 
     <dependencies>
         <dependency>
-            <groupId>com.c.j.w</groupId>
+            <groupId>com.maidao</groupId>
             <artifactId>xcheck</artifactId>
-            <version>${xcheck.version}</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.c.j.w</groupId>
             <artifactId>ac</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0-RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>1.4.1.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
         </dependency>
     </dependencies>
 
@@ -43,6 +31,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.4.1.RELEASE</version>
                 <configuration>
                     <mainClass>com.c.j.w.sample.SampleApplication</mainClass>
                 </configuration>
