--- a/sample/src/main/resources/application.yml
+++ b/sample/src/main/resources/application.yml
@@ -1,14 +1,7 @@
 server:
   port: 8080
 
-spring:
-  redis:
-    database: 0
-    password: 1qaz2wsx
-    host: 127.0.0.1
-    port: 6379
-
 xcheck:
-  controller-package: com.c.j.w.sample
+  controller-package: com.github.xcheck.sample
   column-alias: startTime=开始时间, endTime=结束时间
   show-error-message: false
