--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -10,19 +10,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.maidao</groupId>
+            <groupId>com.github</groupId>
             <artifactId>xcheck</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.c.j.w</groupId>
-            <artifactId>ac</artifactId>
-            <version>1.0.0-RELEASE</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>1.4.1.RELEASE</version>
+            <version>2.1.15.RELEASE</version>
         </dependency>
     </dependencies>
 
@@ -31,17 +26,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.4.1.RELEASE</version>
+                <version>1.4.3.RELEASE</version>
                 <configuration>
-                    <mainClass>com.c.j.w.sample.SampleApplication</mainClass>
+                    <mainClass>com.github.xcheck.sample.SampleApplication</mainClass>
                 </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
